Update BACKEND_URL in dashboard.html and index.html to new server address

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -114,7 +114,7 @@
                 console.error('SDK de Pi Network no disponible');
             }
             
-            const BACKEND_URL = 'https://fb47-85-53-124-102.ngrok-free.app';
+            const BACKEND_URL = 'https://14cf-85-53-124-102.ngrok-free.app';
 
             // Verificar autenticación
             try {
