Update BACKEND_URL in dashboard.html and index.html to new server address

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
     <script src="js/auth.js"></script>
     <script>
 
-        const BACKEND_URL = 'https://14cf-85-53-124-102.ngrok-free.app';
+        const BACKEND_URL = 'https://179a-85-53-124-102.ngrok-free.app';
 
         // Inicializar el SDK tan pronto como esté disponible
         function initPiSDK() {
